--- a/app/assets/stylesheets/pages/repos/_tools.scss
+++ b/app/assets/stylesheets/pages/repos/_tools.scss
@@ -50,13 +50,13 @@
 }
 
 .repo-tools-refresh,
-.repo-tools-private {
+.repo-tools-add {
   flex-grow: 1;
   flex-shrink: 0;
   vertical-align: top;
 }
 
-.repo-tools-private {
+.repo-tools-add {
   margin-right: 0.5em;
 
   @include media($small-screen-only) {
@@ -65,7 +65,7 @@
 }
 
 .repo-tools-refresh-button,
-.repo-tools-private-button {
+.repo-tools-add-button {
   background-color: $base-background-color;
   border: 2px solid $base-border-color;
   border-radius: 3px;
