Add banner with a message about GitHub app

--- a/app/assets/stylesheets/pages/repos/_index.scss
+++ b/app/assets/stylesheets/pages/repos/_index.scss
@@ -85,7 +85,7 @@
 }
 
 .no-repos-message {
-  @extend %content-frame;
+  @include content-frame;
   color: $medium-font-color;
   font-size: 1.5em;
   margin-top: 0.6em;
