--- a/app/views/repos/index.haml
+++ b/app/views/repos/index.haml
@@ -4,6 +4,8 @@
 
 - if display_onboarding?
   = render 'onboarding'
+- else
+  = render 'github_app'
 
 %section.organization-list{ 'organization-list' => '' }
 
